Bug 2266: Could not uncollapse a tag if you turn on advancedMARCeditor.
Changed the tagnum <span> into an anchor and added javascript to expand the marc fields if the number is clicked.  This only worked properly when the html tag was an anchor.
The tagnum property in the css file that was changed is only used in addbiblio.tmpl, eventhough additem.tmpl and authorities.tmpl also use this css file.

--- a/koha-tmpl/intranet-tmpl/prog/en/css/addbiblio.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/css/addbiblio.css
@@ -69,11 +69,12 @@ div.subfield_line label {
 	padding : .2em 0;
 }
 
-.tagnum {
+a.tagnum {
 	font-size : 110%;
 	font-weight : bold;
 	color : #000;
 	padding : .1em .3em .1em 0;
+	text-decoration : none;
 }
 
 .subfield {
